REGRESSION (r276633): ASSERTION FAILED: !forbidMallocUseScopeCount || disableMallocRestrictionScopeCount under WebCore::AudioSampleDataSource::create() https://bugs.webkit.org/show_bug.cgi?id=225196 <rdar://problem/77329071>

Reviewed by Eric Carlson.

Covered by API test no longer crashing.

* Modules/speech/SpeechRecognitionCaptureSourceImpl.cpp:
(WebCore::SpeechRecognitionCaptureSourceImpl::audioSamplesAvailable):
Disabling check here until we figure out a better way of doing things.


Canonical link: https://commits.webkit.org/237190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276839 268f45cc-cd09-0410-ab3c-d52691b4dbfc